src/parser/snapshots/coconut__parser__functions__tests__function_declaration-3.snap
---
source: src/parser/functions.rs
expression: "parse_function_declaration(r#\"function a(param1, param2) {}\"#.into()).unwrap().1"
---
{
  "type": "FunctionDeclaration",
  "id": {
    "type": "Identifier",
    "name": "a",
    "start": 9,
    "end": 10
  },
  "params": [
    {
      "type": "Identifier",
      "name": "param1",
      "start": 11,
      "end": 17
    },
    {
      "type": "Identifier",
      "name": "param2",
      "start": 19,
      "end": 25
    }
  ],
  "body": {
    "type": "BlockStatement",
    "body": [],
    "start": 27,
    "end": 29
  },
  "start": 0,
  "end": 29
}
