src/parser/snapshots/coconut__parser__functions__tests__function_declaration-5.snap
---
source: src/parser/functions.rs
expression: "parse_function_declaration(r#\"function a() {\n                    \"use strict\"\n                    \"also directive\"\n                    a;\n                    \"not directive\"\n                    return 1\n                }\"#.into()).unwrap().1"
---
{
  "type": "FunctionDeclaration",
  "id": {
    "type": "Identifier",
    "name": "a",
    "start": 9,
    "end": 10
  },
  "params": [],
  "body": {
    "type": "BlockStatement",
    "body": [
      {
        "type": "ExpressionStatement",
        "expression": {
          "type": "Literal",
          "value": "use strict",
          "start": 35,
          "end": 47
        },
        "directive": "use strict",
        "start": 35,
        "end": 47
      },
      {
        "type": "ExpressionStatement",
        "expression": {
          "type": "Literal",
          "value": "also directive",
          "start": 68,
          "end": 84
        },
        "directive": "also directive",
        "start": 68,
        "end": 84
      },
      {
        "type": "ExpressionStatement",
        "expression": {
          "type": "Identifier",
          "name": "a",
          "start": 105,
          "end": 106
        },
        "start": 105,
        "end": 107
      },
      {
        "type": "ExpressionStatement",
        "expression": {
          "type": "Literal",
          "value": "not directive",
          "start": 128,
          "end": 143
        },
        "start": 128,
        "end": 143
      },
      {
        "type": "ReturnStatement",
        "argument": {
          "type": "Literal",
          "value": 1.0,
          "start": 171,
          "end": 172
        },
        "start": 164,
        "end": 172
      }
    ],
    "start": 13,
    "end": 190
  },
  "start": 0,
  "end": 190
}
