src/parser/snapshots/coconut__parser__functions__tests__function_declaration-6.snap
---
source: src/parser/functions.rs
expression: "parse_function_declaration(r#\"function fib() {\n                    if (x === 0) return 0;\n                    else if (x === 1) return 1;\n                    else return fib(x - 1) + fib(x - 2);\n                }\"#.into()).unwrap().1"
---
{
  "type": "FunctionDeclaration",
  "id": {
    "type": "Identifier",
    "name": "fib",
    "start": 9,
    "end": 12
  },
  "params": [],
  "body": {
    "type": "BlockStatement",
    "body": [
      {
        "type": "IfStatement",
        "test": {
          "type": "BinaryExpression",
          "operator": "===",
          "left": {
            "type": "Identifier",
            "name": "x",
            "start": 41,
            "end": 42
          },
          "right": {
            "type": "Literal",
            "value": 0.0,
            "start": 47,
            "end": 48
          },
          "start": 41,
          "end": 48
        },
        "consequent": {
          "type": "ReturnStatement",
          "argument": {
            "type": "Literal",
            "value": 0.0,
            "start": 57,
            "end": 58
          },
          "start": 50,
          "end": 59
        },
        "alternate": {
          "type": "IfStatement",
          "test": {
            "type": "BinaryExpression",
            "operator": "===",
            "left": {
              "type": "Identifier",
              "name": "x",
              "start": 89,
              "end": 90
            },
            "right": {
              "type": "Literal",
              "value": 1.0,
              "start": 95,
              "end": 96
            },
            "start": 89,
            "end": 96
          },
          "consequent": {
            "type": "ReturnStatement",
            "argument": {
              "type": "Literal",
              "value": 1.0,
              "start": 105,
              "end": 106
            },
            "start": 98,
            "end": 107
          },
          "alternate": {
            "type": "ReturnStatement",
            "argument": {
              "type": "BinaryExpression",
              "operator": "+",
              "left": {
                "type": "CallExpression",
                "callee": {
                  "type": "Identifier",
                  "name": "fib",
                  "start": 140,
                  "end": 143
                },
                "arguments": [
                  {
                    "type": "BinaryExpression",
                    "operator": "-",
                    "left": {
                      "type": "Identifier",
                      "name": "x",
                      "start": 144,
                      "end": 145
                    },
                    "right": {
                      "type": "Literal",
                      "value": 1.0,
                      "start": 148,
                      "end": 149
                    },
                    "start": 144,
                    "end": 149
                  }
                ],
                "start": 140,
                "end": 150
              },
              "right": {
                "type": "CallExpression",
                "callee": {
                  "type": "Identifier",
                  "name": "fib",
                  "start": 153,
                  "end": 156
                },
                "arguments": [
                  {
                    "type": "BinaryExpression",
                    "operator": "-",
                    "left": {
                      "type": "Identifier",
                      "name": "x",
                      "start": 157,
                      "end": 158
                    },
                    "right": {
                      "type": "Literal",
                      "value": 2.0,
                      "start": 161,
                      "end": 162
                    },
                    "start": 157,
                    "end": 162
                  }
                ],
                "start": 153,
                "end": 163
              },
              "start": 140,
              "end": 163
            },
            "start": 133,
            "end": 164
          },
          "start": 85,
          "end": 164
        },
        "start": 37,
        "end": 164
      }
    ],
    "start": 15,
    "end": 182
  },
  "start": 0,
  "end": 182
}
