src/parser/snapshots/coconut__parser__functions__tests__function_expr-2.snap
---
source: src/parser/functions.rs
expression: "parse_function_declaration(r#\"function a() {\n                    // function expression\n                    0, function b() {}\n                }\"#.into()).unwrap().1"
---
{
  "type": "FunctionDeclaration",
  "id": {
    "type": "Identifier",
    "name": "a",
    "start": 9,
    "end": 10
  },
  "params": [],
  "body": {
    "type": "BlockStatement",
    "body": [
      {
        "type": "ExpressionStatement",
        "expression": {
          "type": "SequenceExpression",
          "expressions": [
            {
              "type": "Literal",
              "value": 0.0,
              "start": 78,
              "end": 79
            },
            {
              "type": "FunctionExpression",
              "id": {
                "type": "Identifier",
                "name": "b",
                "start": 90,
                "end": 91
              },
              "params": [],
              "body": {
                "type": "BlockStatement",
                "body": [],
                "start": 94,
                "end": 96
              },
              "start": 81,
              "end": 96
            }
          ],
          "start": 78,
          "end": 96
        },
        "start": 78,
        "end": 96
      }
    ],
    "start": 13,
    "end": 114
  },
  "start": 0,
  "end": 114
}
